objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__yubikey_id__c</fullName>
        <label>yubikey_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__yubikey_nextAllowedLoginAttemptTime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>yubikey_nextAllowedLoginAttemptTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__yubikey_tempcode__c</fullName>
        <label>yubikey_tempcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__yubikey_tempcode_expiration__c</fullName>
        <label>yubikey_tempcode_expiration</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>